tests/baselines/reference/classWithDuplicateIdentifier.types
//// [tests/cases/compiler/classWithDuplicateIdentifier.ts] ////

=== classWithDuplicateIdentifier.ts ===
class C {
>C : C
>  : ^

    a(): number { return 0; } // error: duplicate identifier
>a : () => number
>  : ^^^^^^      
>0 : number
>  : ^^^^^^

    a: number;
>a : () => number
>  : ^^^^^^      
}
class K {
>K : K
>  : ^

    b: number; // error: duplicate identifier
>b : number
>  : ^^^^^^

    b(): number { return 0; }
>b : () => number
>  : ^^^^^^      
>0 : number
>  : ^^^^^^
}
class D {
>D : D
>  : ^

    c: number;
>c : number
>  : ^^^^^^

    c: string;
>c : number
>  : ^^^^^^
}

